# s3_lifecycle_manager

./: .gitignore  LICENSE copy  Makefile  README.md  README_PTBR.md  README_pt_BR.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  lint.yml  security.yml  test.yml
src/s3_lifecycle_manager/: __main__.py  auth.py  aws_glue_log_paths.py  backup_manager.py  lifecycle_policy.py  logger.py  manager.py
tests/: test_auth.py  test_aws_glue_log_paths.py  test_backup_manager.py  test_lifecycle_manager.py  test_lifecycle_policy.py
